--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,85 @@ body {
 	font-size: 16px;
 	background-color: #F5F5F5;
 }
+
+#firstWindow {
+  background: #3F51B5;
+  position: absolute;
+  z-index: 2;
+  overflow: hidden; }
+
+#firstWindow {
+  width: 100%;
+  height: 100%; }
+
+#mainName {
+  text-align: center;
+  position: relative;
+  padding-top: 200px;
+  right: 0;
+  left: 0;
+  color: #ff4081;
+  font-size: 2em; }
+
+#mainName h1 span {
+  color: #ffffff; }
+
+#mainName h1 {
+  font-weight: bold;
+  margin-bottom: 0; }
+
+#mainName h2 {
+  margin-top: 0;
+  font-weight: 300; }
+
+.typed-cursor {
+  display: none; }
+
+@keyframes example {
+  0% {
+    left: 10%;
+    top: 10%;
+    bottom: 10%;
+    right: 10%;
+    width: 80%;
+    height: 80%; }
+  25% {
+    left: 20%;
+    top: 20%;
+    bottom: 20%;
+    right: 20%;
+    width: 60%;
+    height: 60%; }
+  50% {
+    left: 30%;
+    top: 30%;
+    bottom: 30%;
+    right: 30%;
+    width: 40%;
+    height: 40%; }
+  75% {
+    left: 40%;
+    top: 40%;
+    bottom: 40%;
+    right: 40%;
+    width: 20%;
+    height: 20%; }
+  100% {
+    left: 50%;
+    top: 50%;
+    bottom: 50%;
+    right: 50%;
+    width: 0;
+    height: 0; } }
+.anim {
+  animation-name: example;
+  animation-duration: 1s; }
+
+#mainName h1 {
+  bottom: -500px;
+  opacity: 0;
+  position: relative; }
+
 .logo {
 	text-align: right;
 	background-color:$mainColor;
